--- a/App/flashcards/package.json
+++ b/App/flashcards/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.8.2",
+    "material-ui": "^0.20.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
